--- a/app/views/paypal/index.html.erb
+++ b/app/views/paypal/index.html.erb
@@ -12,49 +12,49 @@
   </p>
 </div>
 
-<script src="https://www.paypalobjects.com/api/checkout.js"></script>
-
 <div id="paypal-button-container"></div>
 
-<script>
-    paypal.Button.render({
+<script type="text/javascript">
+  paypal.Button.render({
 
-        env: 'sandbox', // sandbox | production
+    env: 'sandbox', // sandbox | production
 
-        // Show the buyer a 'Pay Now' button in the checkout flow
-        commit: true,
+    // Show the buyer a 'Pay Now' button in the checkout flow
+    commit: true,
 
-        // payment() is called when the button is clicked
-        payment: function() {
+    // payment() is called when the button is clicked
+    payment: function() {
 
-            // Set up a url on your server to create the payment
-            var CREATE_URL = "<%= checkout_url %>";
+      // Set up a url on your server to create the payment
+      var CREATE_URL = "<%= checkout_url %>";
 
-            // Make a call to your server to set up the payment
-            return paypal.request.post(CREATE_URL)
-                .then(function(res) {
-                    return res.paymentID;
-                });
-        },
+      // Make a call to your server to set up the payment
+      return paypal.request.post(CREATE_URL).then(function(res) {
+        return res.paymentID;
+      });
+    },
 
-        // onAuthorize() is called when the buyer approves the payment
-        onAuthorize: function(data, actions) {
+    // onAuthorize() is called when the buyer approves the payment
+    onAuthorize: function(data, actions) {
 
-            // Set up a url on your server to execute the payment
-            var EXECUTE_URL = "<%= execute_url %>";
+      // Set up a url on your server to execute the payment
+      var EXECUTE_URL = "<%= execute_url %>";
 
-            // Set up the data you need to pass to your server
-            var data = {
-                paymentID: data.paymentID,
-                payerID: data.payerID
-            };
+      // Set up the data you need to pass to your server
+      var data = {
+        paymentID: data.paymentID,
+        payerID: data.payerID
+      };
 
-            // Make a call to your server to execute the payment
-            return paypal.request.post(EXECUTE_URL, data)
-                .then(function (res) {
-                    window.alert('Payment Complete!');
-                });
+      // Make a call to your server to execute the payment
+      return paypal.request.post(EXECUTE_URL, data).then(function (res) {
+        if (res.success == true) {
+          window.alert(res.msg);
+        } else {
+          window.alert(res.msg["details"][0]["issue"]);
         }
+      });
+    }
 
-    }, '#paypal-button-container');
+  }, '#paypal-button-container');
 </script>
