--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -3,7 +3,7 @@ Rider Name: <%= Ride::RIDE_DETAIL[:rider_id][:name] %> <br>
 Driver Name: <%= Ride::RIDE_DETAIL[:driver_id][:name] %> <br>
 Source: <%= Ride::RIDE_DETAIL[:source] %> <br>
 Destination: <%=  Ride::RIDE_DETAIL[:source] %> <br>
-Amount : <%= Ride::RIDE_DETAIL[:OrderTotal][:value] %>
+Amount : <%= Ride::RIDE_DETAIL[:OrderTotal][:value] %> <%=  Ride::RIDE_DETAIL[:OrderTotal][:currencyID]%>
 
 <br>
 <br>
